Dividi os titulos  "Pontos Positivos" e "Pontos negativos", alterei a fonte e arrumei a logo da nav.

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <img src="assets\img\img2.png" class="img2">
     </div>
     <div id="vantedesvan">
-        <h2 id="VantagensEDesvantagens" class="section-title">Pontos positivos e negativos</h2 id="fade_in">
+        <h2 id="VantagensEDesvantagens" class="section-title">Pontos positivos </h2 id="fade_in">
         <div class="grid-container">
             <div class="grid-item" id="fade_in">
                 <div id="pontopositivo"><h3>É uma fonte de energia renovável e limpa</h3></div> 
@@ -100,6 +100,9 @@
             <div class="grid-item" id="fade_in">
                 <div id="pontopositivo"><h3 >O impacto visual das instalações é relativamente baixo</h3></div>
             </div>
+        </div>
+            <h2 id="VantagensEDesvantagens" class="section-title">Pontos negativos</h2 id="fade_in">
+            <div class="grid-container">
             <div class="grid-item" id="fade_in">
                 <div id="pontonegativo"><h3>Os custos de instalação são elevados</h3></div>
             </div>
@@ -109,8 +112,8 @@
             <div class="grid-item" id="fade_in">
                 <div id="pontonegativo"><h3>A energia maremotriz só pode ser instalada em locais específicos</h3></div>
             </div>
-         </div>
         </div>
+    </div>
     </div>
     <div class="two-column" id="fade_in">
         <div class="text">
